# StudentRosterLG_CPP

./: .gitignore  CMakeLists.txt  README.md  StudentRosterLG-C867.sln  StudentRosterLG-C867.vcxproj  degree.h  main.cpp  roster.cpp  roster.h  student.cpp  student.h
.github/workflows/: c-cpp.yml
docs/: Doxyfile
include/: degree.h  roster.h  student.h
src/: main.cpp  roster.cpp  student.cpp
